# symmetrical-broccoli

./: .env.example  .gitignore  .llm-reliability.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TASKS.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: llm-reliability.yml
docs/: ARCHITECTURE.md
docs/policies/: account-and-privacy.md  pricing-and-promotions.md  returns-and-refunds.md  shipping.md  warranty.md
src/: api.py  orchestrator.py
src/agents/: extract_claims.py  generate_prompts.py  retrieve_evidence.py  run_model.py  score_risk.py  verify_claims.py
src/config/: loader.py
src/ingest/: pipeline.py
src/wrappers/: bedrock.py  elasticsearch_helper.py
tasks/: T01-project-scaffolding.md  T02-config-loader.md  T03-bedrock-wrapper.md  T04-elasticsearch-helper.md  T05-score-risk.md  T06-generate-prompts.md  T07-run-model.md  T08-extract-claims.md  T09-retrieve-evidence.md  T10-verify-claims.md  T11-doc-ingest.md  T12-orchestrator.md  T13-fastapi-backend.md  T14-github-action.md  T15-unit-tests.md  T16-integration-tests.md
tests/fixtures/: test_config.yaml
tests/fixtures/trusted_docs/: product_warranty.txt  return_policy.txt  shipping_policy.txt
tests/integration/: conftest.py  test_full_pipeline.py  test_ingest.py
tests/unit/: test_api.py  test_bedrock_wrapper.py  test_config_loader.py  test_elasticsearch_helper.py  test_extract_claims.py  test_generate_prompts.py  test_ingest_pipeline.py  test_orchestrator.py  test_retrieve_evidence.py  test_run_model.py  test_score_risk.py  test_verify_claims.py
