[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-reliability-gate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "boto3",
    "elasticsearch",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ollama",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
